--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/instagram
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/twitter
 spring.datasource.username=root
 spring.datasource.password=@Harsh2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
